<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:fontFamily="@font/overlock"
        android:padding="10dp"
        android:text="@string/registerTitle"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:paddingLeft="15sp"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle"

        android:hint="@string/username"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:paddingStart="15sp"
        android:background="@drawable/input_border"

        android:inputType="textPassword"
        android:hint="@string/password"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginTop="20sp"

        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200sp"
        android:layout_height="50sp"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        android:textAllCaps="false"
        android:text="@string/register"

        android:layout_marginBottom="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>