<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_insert">

    <TextView
        android:id="@+id/insertProductTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:fontFamily="@font/overlock"
        android:padding="10dp"
        android:text="@string/insertProductTitle"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:paddingLeft="15sp"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toBottomOf="@+id/insertProductTitle"

        android:hint="@string/productName"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/ProductTypeEditText"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:paddingStart="15sp"
        android:background="@drawable/input_border"

        android:inputType="text"
        android:hint="@string/productType"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toBottomOf="@+id/productNameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/productImageIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ProductTypeEditText"

        android:layout_marginTop="30sp"

        android:src="@drawable/baseline_person_24"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/insertProductBtn"
        android:layout_width="200sp"
        android:layout_height="50sp"

        android:textSize="20sp"
        android:layout_marginTop="15dp"

        android:textAllCaps="false"
        android:text="@string/insertProduct"

        android:layout_marginBottom="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>